# keyboard

./: .gitignore  CMakeLists.txt  action.c  action.h  action_stream.c  action_stream.cpp  action_stream.h  action_stream.hpp  circap.cpp  dictionary.c  dictionary.cpp  dictionary.h  dictionary.hpp  formatter.c  formatter.h  keyboard_reader.c  keyboard_reader.h  main.c  main.cpp  match.c  match.h  meta.c  meta.cpp  meta.h  meta.hpp  outputter.c  outputter.h  string_help.c  string_help.h  stroke.c  stroke.cpp  stroke.h  stroke.hpp  stroke_stream.c  stroke_stream.h  translation.c  translation.h  typer.c  typer.cpp  typer.h  (+3 more)
FatFs_SPI/ff15/source/: ff.c
FatFs_SPI/sd_driver/: hw_config.c  sd_card.c  sd_spi.c
regex/: CMakeLists.txt  regex-type.h
